RESOLVED FIXED61710
REGRESSION (r86924): webkitRequestFullScreen does not work properly (black screen, can’t interact)
https://bugs.webkit.org/show_bug.cgi?id=61710
Summary REGRESSION (r86924): webkitRequestFullScreen does not work properly (black sc...
Jer Noble
Reported 2011-05-29 13:27:09 PDT
REGRESSION (r86924): webkitRequestFullScreen does not work properly (black screen, can’t interact)
Attachments
Patch (4.09 KB, patch)
2011-05-29 13:30 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-05-29 13:30:41 PDT
Jer Noble
Comment 2 2011-05-29 14:28:39 PDT
Comment on attachment 95298 [details] Patch Clearing flags on attachment: 95298 Committed r87652: <http://trac.webkit.org/changeset/87652>
Jer Noble
Comment 3 2011-05-29 14:28:43 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 4 2011-05-29 14:31:57 PDT
Note You need to log in before you can comment on or make changes to this bug.