2011-05-29  Jer Noble  <jer.noble@apple.com>

Reviewed by Simon Fraser.

        REGRESSION (r86924): webkitRequestFullScreen does not work properly (black screen, can’t interact)
        https://bugs.webkit.org/show_bug.cgi?id=61710

        When taking the documentElement full screen, we don't create a RenderFullScreen
        object and thus never enter accelerated compositing mode for the animation. Tell
        the WKFullScreenWindowController to enter accelerated compositing mode anyway
        (with an empty layer context) so as to fulfill its expectations and cause the
        full screen animation to complete.

        * UIProcess/mac/WKFullScreenWindowController.mm:
        (-[WKFullScreenWindowController finishedEnterFullScreenAnimation:]): Added a
            comment explaining when we expect the animation to complete.
        (-[WKFullScreenWindowController enterAcceleratedCompositingMode:WebKit::]):
            Remove an ASSERT which is no longer valid.
        * WebProcess/FullScreen/mac/WebFullScreenManagerMac.mm:
        (WebKit::WebFullScreenManagerMac::beginEnterFullScreenAnimation): Tell the UIProcess
            to enter then exit full-screen mode.
        (WebKit::WebFullScreenManagerMac::beginExitFullScreenAnimation): Ditto.

Canonical link: https://commits.webkit.org/77147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87652 268f45cc-cd09-0410-ab3c-d52691b4dbfc